src/app/core/navbar/navbar.component.scss
.navbar {
  position: fixed;
  background-color: var(--bg-secondary);
}
.navbar-nav {
  list-style: none;
  padding: 0;
  margin: 0;
  display: flex;
  align-items: center;
  height: 100%;
}
.nav-item {
  width: 100%;
  height: 100%;
  text-align: center;
}
.nav-link {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 4rem;
  text-decoration: none;
}
.nav-link i.material-icons {
  font-size: 2rem;
  color: var(--text-secondary);
}
.nav-link.active {
  border-top: 3px solid var(--primary-color);
  i.material-icons {
    color: var(--primary-color);
  }
}

/* Small screens */
@media only screen and (max-width: 600px) {
  .navbar {
    bottom: 0;
    width: 100vw;
    height: 4rem;
  }

  .navbar-nav {
    flex-direction: row;
  }
}

